--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
    ***************************************************************************
    <hr color = "21">
-   Apart from Physics I always look for doing something exciting like: <a href = "Hobbies.html">My Hobbies</a>
+   Apart from Physics I always look for doing something exciting like: <a href = "hobbies.html">My Hobbies</a>
    <hr color = "21">
-   <p>If you want to talk to me about physics or anything, please<a href = "My Contact.html">Connect</a></p>
+   <p>If you want to talk to me about physics or anything, please<a href = "my contact.html">Connect</a></p>
 </body>
 </html>
